--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id = "container">
         <div id="cabecera">
-            <h1>CABECERA</h1>
+            <h1>Hiperblog</h1>
+            <span id = "tagline">Tu blog de confianza</span>
         </div>
 
         <div id = "post">
