agregando el contenido adicional y mejor topografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,10 @@
             <p> y este es el parrafo de inicio donde vamos a explicar
                 las cosas increibles que se pueden hacer con ramas
             </p>
-
+            <p>Los blog son la mejor forma de compartir informacion y tus ideas.
+                Mucho mas que ir a conferencias o salir en youtube. Exepto            
+                si eres un rockstar. pero por ahora todavia no lo eres
+            </p>
         </div>
 
     </div>
