--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id = "container">
         <div id="cabecera">
             <h1>Hiperblog</h1>
-            <span id = "tagline">Tu blog de confianza</span>
+            <span id = "tagline">Tu blog de cabecera</span>
         </div>
 
         <div id = "post">
