agregue subcripcion cmbie cabecera maetra y puse color azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id = "container">
         <div id="cabecera">
             <h1>Hiperblog</h1>
-            <span id = "tagline">Tu blog de confianza</span>
+            <span id = "tagline">Tu blog de maestro</span>
         </div>
 
         <div id = "post">
@@ -23,6 +23,7 @@
                 Mucho mas que ir a conferencias o salir en youtube. Exepto            
                 si eres un rockstar. pero por ahora todavia no lo eres
             </p>
+            <P>Subcribete y dale link</P>
         </div>
 
     </div>
