--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,9 @@
 <body>
     <div id = "container">
         <div id="cabecera">
-            <h1>Hiperblog</h1>
+
+            <img id="logo" src="./imagenes/dragon.png" >
+             Hyperblog
             <span id = "tagline">Tu blog de cabecera</span>
         </div>
 
