footer terminado y mejorado

--- a/blogpost.html
+++ b/blogpost.html
@@ -27,6 +27,7 @@
         </div>
 	<div id="footer">
 		Hecho con Amor en Platzi...y mas amorlllll
+		lo estamos haciendo muy bien.
 	</div>	
 
     </div>
