tildes y un mensaje de contribucion

--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,7 @@
             <p>Los blog son la mejor forma de compartir informacion y tus ideas.
                 Mucho mas que ir a conferencias o salir en youtube. Exepto            
                 si eres un rockstar. pero por ahora todavia no lo eres
+		eres muy grande.
             </p>
             <P>Subcribete y dale link</P>
         </div>
