--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,8 @@
             <p> y este es el p&aacute;rrafo de inicio donde vamos a explicar
                 las cosas incre&iacute;bles que se pueden hacer con ramas
             </p>
+
+            <p><img src="imagenes/PERRO.jpg" alt="mascota" width="100%"></p>
             <p>Los blog son la mejor forma de compartir informacion y tus ideas.
                 Mucho mas que ir a conferencias o salir en youtube. Exepto            
                 si eres un rockstar. pero por ahora todavia no lo eres
